// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="styles__6tpqrj6"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_true__6tpqrj8"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-compute"
            />
            <div
              class="styles__6tpqrja styles_isFocused_true__6tpqrjb"
              color="var(--rwwhsl2w)"
              id="chart-legend-compute"
              style="--_6tpqrj1: var(--rwwhsl2w);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_true__6tpqrjg"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_true__6tpqrjl"
                />
              </span>
            </div>
            <div
              class="styles_isFocused__6tpqrje"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-gpu"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2x)"
              id="chart-legend-gpu"
              style="--_6tpqrj1: var(--rwwhsl2x);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="styles__6tpqrj6"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_true__6tpqrj8"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-compute"
            />
            <div
              class="styles__6tpqrja styles_isFocused_true__6tpqrjb"
              color="var(--rwwhsl2w)"
              id="chart-legend-compute"
              style="--_6tpqrj1: var(--rwwhsl2w);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_true__6tpqrjg"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_true__6tpqrjl"
                />
              </span>
            </div>
            <div
              class="styles_isFocused__6tpqrje"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-gpu"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2x)"
              id="chart-legend-gpu"
              style="--_6tpqrj1: var(--rwwhsl2x);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="styles__6tpqrj5"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="styles__6tpqrj6"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-compute"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2w)"
              id="chart-legend-compute"
              style="--_6tpqrj1: var(--rwwhsl2w);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-gpu"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2x)"
              id="chart-legend-gpu"
              style="--_6tpqrj1: var(--rwwhsl2x);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.discount"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="styles__6tpqrj6"
      >
        <div
          aria-controls="chart-legend-discount"
          aria-describedby="chart-legend-discount"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-discount"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2w)"
              id="chart-legend-discount"
              style="--_6tpqrj1: var(--rwwhsl2w);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj4"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          I am a legend
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,53.82,-75.845L42.886,-60.796A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M55.501,-74.623A93,93,0,0,1,88.122,-29.725L70.431,-23.977A74.4,74.4,0,0,0,44.568,-59.574Z"
                  data-testid="arc.gpu"
                  fill="var(--rwwhsl2x)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M88.764,-27.748A93,93,0,0,1,88.764,27.748L71.073,22A74.4,74.4,0,0,0,71.073,-22Z"
                  data-testid="arc.functions"
                  fill="var(--rwwhsl2y)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M88.122,29.725A93,93,0,0,1,55.501,74.623L44.568,59.574A74.4,74.4,0,0,0,70.431,23.977Z"
                  data-testid="arc.containers"
                  fill="var(--rwwhsl2z)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M53.82,75.845A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,42.886,60.796Z"
                  data-testid="arc.s3"
                  fill="var(--rwwhsl30)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-53.82,75.845L-42.886,60.796A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.dns"
                  fill="var(--rwwhsl31)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-55.501,74.623A93,93,0,0,1,-88.122,29.725L-70.431,23.977A74.4,74.4,0,0,0,-44.568,59.574Z"
                  data-testid="arc.appleSilicon"
                  fill="var(--rwwhsl32)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.764,27.748A93,93,0,0,1,-88.764,-27.748L-71.073,-22A74.4,74.4,0,0,0,-71.073,22Z"
                  data-testid="arc.baremetal"
                  fill="var(--rwwhsl33)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.122,-29.725A93,93,0,0,1,-55.501,-74.623L-44.568,-59.574A74.4,74.4,0,0,0,-70.431,-23.977Z"
                  data-testid="arc.database"
                  fill="var(--rwwhsl34)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-53.82,-75.845A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-42.886,-60.796Z"
                  data-testid="arc.lb"
                  fill="var(--rwwhsl35)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="styles__6tpqrj6"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-compute"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2w)"
              id="chart-legend-compute"
              style="--_6tpqrj1: var(--rwwhsl2w);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-gpu"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2x)"
              id="chart-legend-gpu"
              style="--_6tpqrj1: var(--rwwhsl2x);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-functions"
          aria-describedby="chart-legend-functions"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-functions"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2y)"
              id="chart-legend-functions"
              style="--_6tpqrj1: var(--rwwhsl2y);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Serverless Functions
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-containers"
          aria-describedby="chart-legend-containers"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-containers"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl2z)"
              id="chart-legend-containers"
              style="--_6tpqrj1: var(--rwwhsl2z);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Serverless Containers
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-s3"
          aria-describedby="chart-legend-s3"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-s3"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl30)"
              id="chart-legend-s3"
              style="--_6tpqrj1: var(--rwwhsl30);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Object Storage
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-dns"
          aria-describedby="chart-legend-dns"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-dns"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl31)"
              id="chart-legend-dns"
              style="--_6tpqrj1: var(--rwwhsl31);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Domain zones
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-appleSilicon"
          aria-describedby="chart-legend-appleSilicon"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-appleSilicon"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl32)"
              id="chart-legend-appleSilicon"
              style="--_6tpqrj1: var(--rwwhsl32);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Apple Silicon
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-baremetal"
          aria-describedby="chart-legend-baremetal"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-baremetal"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl33)"
              id="chart-legend-baremetal"
              style="--_6tpqrj1: var(--rwwhsl33);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Baremetal
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-database"
          aria-describedby="chart-legend-database"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-database"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl34)"
              id="chart-legend-database"
              style="--_6tpqrj1: var(--rwwhsl34);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Database
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-lb"
          aria-describedby="chart-legend-lb"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <li
            class="styles__6tpqrj7 styles_isFocused_false__6tpqrj9"
          >
            <div
              class="styles__6tpqrji"
              data-testid="chart-legend-lb"
            />
            <div
              class="styles__6tpqrja"
              color="var(--rwwhsl35)"
              id="chart-legend-lb"
              style="--_6tpqrj1: var(--rwwhsl35);"
            />
            <div
              class="styles__6tpqrjc"
            >
              <span
                class="styles__6tpqrjf styles_isFocused_false__6tpqrjh"
              >
                Load Balancer
              </span>
              <span
                class="styles__6tpqrjj"
              >
                <span
                  class="styles__6tpqrjk styles_isFocused_false__6tpqrjm"
                />
              </span>
            </div>
            <div
              class="styles_default__6tpqrjd"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with no props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj3"
      style="--_6tpqrj0: 206px;"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="var(--rwwhsl2m)"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="var(--rwwhsl2w)"
                  opacity="1"
                  stroke="rgb(0, 0, 0)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
